--- a/Airplace2025/Properties/Resources.resx
+++ b/Airplace2025/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="pngwing.com (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pngwing.com (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="add-square.512x512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add-square.512x512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="dustbin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dustbin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -148,7 +151,7 @@
   <data name="noun-setting-8140887" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\noun-setting-8140887.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="add-square.512x512" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\add-square.512x512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="sliders-solid-full" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sliders-solid-full.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
